[gd_scene load_steps=4 format=3 uid="uid://0outhjkgsbdo"]

[ext_resource type="Theme" uid="uid://dijqjy6cqknsb" path="res://assets/themes/ui_theme.tres" id="1_g468e"]
[ext_resource type="Script" path="res://global/alert_modal/alert_modal.gd" id="2_74i7r"]
[ext_resource type="PackedScene" uid="uid://dx3j6taat0hti" path="res://scenes/ui/button/button.tscn" id="3_dxp0d"]

[node name="AlertModal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_g468e")
script = ExtResource("2_74i7r")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 205.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
offset_right = 200.0
offset_bottom = 189.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 184.0
offset_bottom = 173.0

[node name="TitleHBox" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 168.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleHBox"]
unique_name_in_owner = true
offset_top = 5.0
offset_right = 104.0
offset_bottom = 34.0
size_flags_horizontal = 3
theme_type_variation = &"HeaderLarge"
text = "Title"
vertical_alignment = 1

[node name="CloseButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleHBox" instance=ExtResource("3_dxp0d")]
offset_left = 108.0
offset_right = 168.0
offset_bottom = 40.0
text = " X "

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 44.0
offset_right = 168.0
offset_bottom = 56.0

[node name="Message" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 60.0
offset_right = 168.0
offset_bottom = 85.0
theme_type_variation = &"HeaderMedium"
text = "Message here"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 89.0
offset_right = 168.0
offset_bottom = 113.0
theme_override_constants/separation = 24

[node name="ButtonsHBox" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 117.0
offset_right = 168.0
offset_bottom = 157.0
alignment = 2

[node name="CancelButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsHBox" instance=ExtResource("3_dxp0d")]
unique_name_in_owner = true
offset_left = 12.0
offset_right = 120.0
offset_bottom = 40.0
text = "Cancel"

[node name="OkButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsHBox" instance=ExtResource("3_dxp0d")]
unique_name_in_owner = true
offset_left = 124.0
offset_right = 168.0
offset_bottom = 40.0
text = "Ok"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleHBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsHBox/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsHBox/OkButton" to="." method="_on_ok_pressed"]
